Update CORS configuration to use deployed frontend URL